--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8">
   <title>CrowdFunding</title>
   <base href="/">
-
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|East+Sea+Dokdo" rel="stylesheet">
+  <script src="//netdna.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
